contoso-air-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: contoso-air-service
  labels:
    app: contoso-air
spec:
  selector:
    app: contoso-air
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
